# allegrexplorer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: GLFW.cmake  imgui.cmake
res/: cube.elf  cube.txt
src/: allegrexplorer_context.cpp  allegrexplorer_context.hpp  allegrexplorer_info.hpp  allegrexplorer_settings.cpp  allegrexplorer_settings.hpp  colors.cpp  colors.hpp  disassembly_window.cpp  disassembly_window.hpp  goto_popup.cpp  goto_popup.hpp  imgui_util.cpp  imgui_util.hpp  log_window.cpp  log_window.hpp  main.cpp  popups.cpp  popups.hpp  psp_module_info_window.cpp  psp_module_info_window.hpp  ui.cpp  ui.hpp  window_imgui_util.cpp  window_imgui_util.hpp
src/fonts/: fonts.hpp  roboto-regular.c
src/fs-ui/: filepicker.cpp  filepicker.hpp  utils.hpp
src/window/: colorscheme.cpp  colorscheme.hpp  find_font.cpp  find_font.hpp  fonts.hpp  window_imgui_util.cpp  window_imgui_util.hpp
src/window/colorschemes/: dark.hpp  light.hpp
src/window/styles/: main_style.hpp
